--- a/Disruptor/res/values/colors.xml
+++ b/Disruptor/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primaryButton">#99CCFF</color>
+    <color name="primaryButtonActive">#99CCFF</color>
 </resources>
