--- a/Disruptor/res/menu/activity_main.xml
+++ b/Disruptor/res/menu/activity_main.xml
@@ -1,5 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:id="@+id/aboutMenuItem"
+          android:text="@string/about"
+          android:title="@string/about" />
+
     <item android:id="@+id/exitMenuItem"
           android:text="@string/exit"
           android:title="@string/exit" />
+
 </menu>
